tests/baselines/reference/privateNameBadSuper.errors.txt
privateNameBadSuper.ts(4,3): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties, parameter properties, or private identifiers.
privateNameBadSuper.ts(5,5): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== privateNameBadSuper.ts (2 errors) ====
    class B {};
    class A extends B {
      #x;
      constructor() {
      ~~~~~~~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties, parameter properties, or private identifiers.
        this;
        ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        super();
      }
    }